# Recolor

./: CMakeLists.txt  README.md  command.txt  game.c  game_io.c  game_io_tester.c  recolor_solver.c  recolor_text.c  test_game_V2.c  test_game_io.c
